Fix: Move devDeps to deps and explicit build command to ensure build success

--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "prisma": "^5.22.0",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
+    "zod": "^4.1.12",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
